--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -13,9 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\tgoal_speed -> 1.0\n",
+      "\t\tgoal_size -> 5.0\n",
+      "Unity brain name: ReacherBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 33\n",
+      "        Number of stacked Vector Observation: 1\n",
+      "        Vector Action space type: continuous\n",
+      "        Vector Action space size (per agent): 4\n",
+      "        Vector Action descriptions: , , , \n"
+     ]
+    }
+   ],
    "source": [
     "from unityagents import UnityEnvironment\n",
     "import numpy as np\n",
@@ -41,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +85,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of agents: 20\n",
+      "Size of each action: 4\n",
+      "There are 20 agents. Each observes a state with length: 33\n",
+      "The state for the first agent looks like: [ 0.00000000e+00 -4.00000000e+00  0.00000000e+00  1.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00 -4.37113883e-08  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00 -1.00000000e+01  0.00000000e+00\n",
+      "  1.00000000e+00 -0.00000000e+00 -0.00000000e+00 -4.37113883e-08\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  5.75471878e+00 -1.00000000e+00\n",
+      "  5.55726624e+00  0.00000000e+00  1.00000000e+00  0.00000000e+00\n",
+      " -1.68164849e-01]\n"
+     ]
+    }
+   ],
    "source": [
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
@@ -96,9 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total score (averaged over agents) this episode: 0.08499999810010195\n"
+     ]
+    }
+   ],
    "source": [
     "env_info = env.reset(train_mode=True)[brain_name]      # reset the environment    \n",
     "states = env_info.vector_observations                  # get the current state (for each agent)\n",
@@ -126,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,22 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "random_seed = 20\n",
-    "actor_fc1_units, actor_fc2_units, critic_fcs1_units, critic_fc2_units = 600, 400, 600, 400\n",
+    "actor_fc1_units, actor_fc2_units, critic_fcs1_units, critic_fc2_units = 256, 256, 256, 256\n",
     "agent = Agent(state_size=state_size, action_size=action_size, random_seed=random_seed, num_agents=num_agents, actor_fc1_units=actor_fc1_units, actor_fc2_units=actor_fc2_units, critic_fc1_units=critic_fcs1_units, critic_fc2_units=critic_fc2_units)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ddpg(n_episodes=2000, max_t=700):\n",
+    "def ddpg(n_episodes=1000, max_t=1000):\n",
     "    scores_deque = deque(maxlen=100)\n",
     "    scores = []         # average score history for each episode\n",
     "\n",
@@ -212,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,9 +281,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 100\tAverage Score: 3.39\n",
+      "Episode 200\tAverage Score: 9.38\n",
+      "Episode 300\tAverage Score: 12.38\n",
+      "Episode 400\tAverage Score: 16.18\n",
+      "Episode 496\tAverage Score: 16.86"
+     ]
+    }
+   ],
    "source": [
-    "scores = ddpg(300, 1000)\n",
+    "scores = ddpg(1000, 1000)\n",
     "plot_scores(scores)"
    ]
   },
