Slightly update main code and test animation

--- a/Continuous_Control_Test.ipynb
+++ b/Continuous_Control_Test.ipynb
@@ -125,9 +125,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 1\tAverage Score: 36.31\n",
-      "Episode 2\tAverage Score: 36.31\n",
-      "Episode 3\tAverage Score: 38.19\n"
+      "Episode 1\tAverage Score: 38.83\n",
+      "Episode 2\tAverage Score: 38.83\n",
+      "Episode 3\tAverage Score: 37.10\n"
      ]
     }
    ],
@@ -155,6 +155,15 @@
     "        avg_episode_score = np.mean(episode_scores)\n",
     "        \n",
     "    print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, avg_episode_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
    ]
   },
   {
