feat : Add support for one agent version
Add support for one agent version. Hyperparameters aren't fine tuned in this commit.

--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -51,6 +51,10 @@
     "\n",
     "from ddpg_agent import Agent\n",
     "\n",
+    "# select this option to load version 1 (with 1 agent) of the environment\n",
+    "#env = UnityEnvironment('Reacher1_Linux/Reacher.x86_64')   # Linux\n",
+    "#env = UnityEnvironment('Reacher1.app')                              # OSX\n",
+    "\n",
     "# select this option to load version 2 (with 20 agents) of the environment\n",
     "env = UnityEnvironment('Reacher20_Linux/Reacher.x86_64')   # Linux\n",
     "#env = UnityEnvironment('Reacher20.app')                              # OSX"
