--- a/Continuous_Control_Test.ipynb
+++ b/Continuous_Control_Test.ipynb
@@ -61,6 +61,11 @@
     }
    ],
    "source": [
+    "# select this option to load version 1 (with 1 agent) of the environment\n",
+    "#env = UnityEnvironment('Reacher1_Linux/Reacher.x86_64')   # Linux\n",
+    "#env = UnityEnvironment('Reacher1.app')                              # OSX\n",
+    "\n",
+    "# select this option to load version 2 (with 20 agent) of the environment\n",
     "env = UnityEnvironment('Reacher20_Linux/Reacher.x86_64')   # Linux\n",
     "#env = UnityEnvironment('Reacher20.app')                              # OSX\n",
     "\n",
